[BACKOUT] JDK-8287281 adjust guarantee in Handshake::execute for the case of target thread being current

XMLWordPrintable

    • b04
    • Verified

      Lots of failures in all tiers right now, seem to be after JDK-8287281.

      It seems to be mostly JDI tests but some indy tests are failing too, example hs_err

      # Internal Error (/workspace/open/src/hotspot/share/runtime/javaThread.cpp:342), pid=4525, tid=23815
      # assert(false) failed: Possible safepoint reached by thread that does not allow it


      Stack: [0x0000700007cee000,0x0000700007dee000], sp=0x0000700007debd80, free space=1015k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x12e5739] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e9
      V [libjvm.dylib+0x12e5dbb] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x3b
      V [libjvm.dylib+0x6c182d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
      V [libjvm.dylib+0xa15815] JavaThread::check_possible_safepoint()+0x45
      V [libjvm.dylib+0x3c7311] ThreadBlockInVMPreprocess<void (JavaThread*)>::ThreadBlockInVMPreprocess(JavaThread*, void (&)(JavaThread*), bool)+0xe1
      V [libjvm.dylib+0x931c65] HandshakeSpinYield::process()+0xf5
      V [libjvm.dylib+0x9312cd] Handshake::execute(HandshakeClosure*, ThreadsListHandle*, JavaThread*)+0x2dd
      V [libjvm.dylib+0xced92c] JvmtiEventControllerPrivate::enter_interp_only_mode(JvmtiThreadState*)+0x1bc
      V [libjvm.dylib+0xcee4f6] JvmtiEventControllerPrivate::recompute_thread_enabled(JvmtiThreadState*)+0x1c6
      V [libjvm.dylib+0xcf053b] JvmtiEventControllerPrivate::set_frame_pop(JvmtiEnvThreadState*, JvmtiFramePop)+0x15b
      V [libjvm.dylib+0xce4dfa] JvmtiEnvBase::set_frame_pop(JvmtiThreadState*, javaVFrame*, int)+0x15a
      V [libjvm.dylib+0xce91dd] SetFramePopClosure::doit(Thread*, bool)+0x15d
      V [libjvm.dylib+0x930db7] HandshakeOperation::do_handshake(JavaThread*)+0x47
      V [libjvm.dylib+0x931810] HandshakeState::try_process(HandshakeOperation*)+0x290
      V [libjvm.dylib+0x931311] Handshake::execute(HandshakeClosure*, ThreadsListHandle*, JavaThread*)+0x321
      V [libjvm.dylib+0xcd6338] JvmtiEnv::NotifyFramePop(_jobject*, int)+0x3d8
      V [libjvm.dylib+0xc7fafc] jvmti_NotifyFramePop(_jvmtiEnv*, _jobject*, int)+0xfc
      C [libjdwp.dylib+0x23de2] initState+0x92
      C [libjdwp.dylib+0x2417c] stepControl_beginStep+0x13c
      C [libjdwp.dylib+0x1696c] eventFilter_setStepFilter+0x7c
      C [libjdwp.dylib+0x6e5c] setCommand+0x40c
      C [libjdwp.dylib+0x14053] debugLoop_run+0x1f3
      C [libjdwp.dylib+0x2a1a6] attachThread+0x76
      V [libjvm.dylib+0xd08a81] JvmtiAgentThread::call_start_function()+0x1d1
      V [libjvm.dylib+0xa169d4] JavaThread::thread_main_inner()+0x264
      V [libjvm.dylib+0x1237f67] Thread::call_run()+0x177
      V [libjvm.dylib+0xfdc5d0] thread_native_entry(Thread*)+0x150
      C [libsystem_pthread.dylib+0x6109] _pthread_start+0x94
      C [libsystem_pthread.dylib+0x1b8b] thread_start+0xf

            Assignee:
            Daniel Daugherty
            Reporter:
            Alan Bateman
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: