8289129: [BACKOUT] JDK-8287281 adjust guarantee in Handshake::execute for the case of target thread being current

Reviewed-by: alanb